--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "express-session": "^1.17.1",
     "lodash": "^4.17.19",
     "mongoose": "^5.9.23",
+    "mongoose-findorcreate": "^3.0.0",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local-mongoose": "^6.0.1"
   }
 }
